renaming tabs, long name wrapping fix

--- a/src/app/styles/tab-strip.module.css
+++ b/src/app/styles/tab-strip.module.css
@@ -87,9 +87,10 @@
 		.name {
 			display: inline-block;
 			min-width: 0;
-			flex-basis: 0;
-			flex-shrink: 1;
 			color: var(--fg-4);
+			overflow: hidden;
+			text-overflow: ellipsis;
+			white-space: nowrap;
 		}
 
 		:first-of-type:not(.active-tab)>& {
@@ -154,6 +155,13 @@
 			border-bottom-right-radius: var(--radius);
 		}
 	}
+}
+
+.tab-rename-field {
+	background-color: transparent;
+	border: none;
+	outline: none;
+	font: inherit;
 }
 
 .add-tab {
